--- a/react/revBoot/src/App.css
+++ b/react/revBoot/src/App.css
@@ -40,3 +40,32 @@
 .read-the-docs {
   color: #888;
 }
+
+h1{
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+}
+
+p{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-align: start;
+  padding: 0 15px;
+}
+
+.page-footer{
+  background-color: #1C1C1C;
+  color: #fff;
+  margin-top: 25px;
+}
+
+.Enviar{
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin: 25px;
+}
+
+
